--- a/pub/css/style.css
+++ b/pub/css/style.css
@@ -110,7 +110,7 @@ header {
   /*height: 675px;*/
 }
 .hero-img{
-  background-image: url("./src/image/1.jpg");
+  background-image: url("../images/1.jpg");
   height: 335px;
 }
 .hero-text{
@@ -379,7 +379,7 @@ list-style: none;
 .contactUs-map{
   padding: 0;
   height: 520px;
-  background-image: url("./src/image/layer_45_107.png");
+  background-image: url("../images/layer_45_107.png");
 }
 .section-contact-details{
   text-align: center;
@@ -421,7 +421,7 @@ list-style: none;
 }
 .contact-details-info>h3:nth-child(1)::before{
   color: #f27554;
-  content: url("./src/image/phone.png");
+  content: url("../images/phone.png");
   position: absolute;
   left: -60px;
   bottom: 0;
@@ -429,14 +429,14 @@ list-style: none;
 }
 .contact-details-info>h3:nth-child(2)::before{
   color: #f27554;
-  content: url("./src/image/list.png");
+  content: url("../images/list.png");
   position: absolute;
   left: -60px;
   bottom: 0;
 }
 .contact-details-info>h3:nth-child(3)::before{
   color: #f27554;
-  content: url("./src/image/map.png");
+  content: url("../images/map.png");
   position: absolute;
   left: -60px;
   bottom: 0;
@@ -497,4 +497,5 @@ list-style: none;
   font-weight: 400;
   color: #ffffff;
   padding-bottom: 100px;
+  padding-bottom: 110px;
 }
